--- a/src/sass/layout/_events-page-content.scss
+++ b/src/sass/layout/_events-page-content.scss
@@ -10,7 +10,6 @@
         color: #282828;
     }
     .title {
-        font-family: 'FuturaMediumC',Arial, Helvetica, sans-serif;
         text-transform: uppercase;
         font-size: 36px;
         color: #fff;
@@ -57,6 +56,10 @@
         img {
             width: 100%;
             height: auto;
+        }
+        .events-name {
+            top: 20px;
+            right: 15px;
         }
         @media (max-width: 992px) {
             margin-bottom: 60px;
