--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -29,6 +29,7 @@
 @import "layout/write-us";
 @import "layout/app-footer";
 
+@import "layout/languages";
 @import "layout/programs-catalog";
 @import "layout/programs-catalog-header";
 @import "layout/programs-catalog-content";
